@@ -24078,128 +24078,160 @@
     </location>
   </country>
   <country>
-    <!-- Translators: The native name is "Danmark" - many contries have their own transcription though, because the country is a very old kingdom. -->
+    <!-- Translators: The native name is "Danmark" - many contries have
+	their own transcription though, because the country is a very old
+	kingdom.
+	-->
     <_name>Denmark</_name>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Anholt Island</_name>
       <code>EKAT</code>
       <coordinates>56-42N 011-33E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Avnø</_name>
       <code>EKAV</code>
       <coordinates>55-05N 011-47E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Billund</_name>
       <code>EKBI</code>
       <coordinates>55-44N 009-10E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Bornholm</_name>
       <code>EKRN</code>
       <coordinates>55-04N 014-45E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Esbjerg</_name>
       <code>EKEB</code>
       <coordinates>55-32N 008-34E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Hadsund</_name>
       <code>EKHS</code>
       <coordinates>56-43N 010-07E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Karup</_name>
       <code>EKKA</code>
       <coordinates>56-18N 009-07E</coordinates>
     </location>
     <city>
-      <!-- Translators: The native name is "København". -->
+      <!-- Translators: This is in Denmark.
+	The native name is "København".
+	-->
       <_name>Copenhagen</_name>
       <location>
+	<!-- Translators: This is in Copenhagen, Denmark. -->
 	<_name>Kastrup</_name>
 	<code>EKCH</code>
 	<coordinates>55-37N 012-39E</coordinates>
       </location>
     </city>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Roskilde</_name>
       <code>EKRK</code>
       <coordinates>55-35N 012-08E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Kolding/Vamdrup</_name>
       <code>EKVD</code>
       <coordinates>55-26N 009-20E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Lindtorp</_name>
       <code>EKHO</code>
       <coordinates>56-24N 008-27E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Maribo/Lolland Falster</_name>
       <code>EKMB</code>
       <coordinates>54-42N 011-27E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Odense</_name>
       <code>EKOD</code>
       <coordinates>55-29N 010-20E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Sindal</_name>
       <code>EKSN</code>
       <coordinates>57-30N 010-13E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Skive</_name>
       <code>EKSV</code>
       <coordinates>56-33N 009-10E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Stauning</_name>
       <code>EKVJ</code>
       <coordinates>56-00N 008-21E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark.
+	The local name is "Sydfyns Flyveplads"
+	("the airport of Sydfyn").
+	-->
       <_name>Sydfyn Airport</_name>
       <code>EKST</code>
       <coordinates>55-01N 010-34E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Sønderborg</_name>
       <code>EKSB</code>
       <coordinates>54-58N 009-47E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Thisted</_name>
       <code>EKTS</code>
       <coordinates>57-04N 008-43E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Værløse</_name>
       <code>EKVL</code>
       <coordinates>55-46N 012-20E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Vandel</_name>
       <code>EKVA</code>
       <coordinates>55-42N 009-12E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Vojens/Skrydstrup</_name>
       <code>EKSP</code>
       <coordinates>55-14N 009-16E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Aalborg</_name>
       <code>EKYT</code>
       <coordinates>57-06N 009-51E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Denmark. -->
       <_name>Århus</_name>
       <code>EKAH</code>
       <coordinates>56-18N 010-37E</coordinates>
@@ -24208,42 +24240,56 @@
   <country>
     <_name>Estonia</_name>
     <location>
+      <!-- Translators: This is in Estonia. -->
       <_name>Kärdla</_name>
       <code>EEKA</code>
       <coordinates>58-59N 022-49E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Estonia. -->
       <_name>Kuressaare</_name>
       <code>EEKE</code>
       <coordinates>58-13-48N 022-30-34E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Estonia. -->
       <_name>Pärnu</_name>
       <code>EEPU</code>
       <coordinates>58-25-09N 024-28-22E</coordinates>
     </location>
     <city>
+      <!-- Translators: This is in Estonia. -->
       <_name>Tallinn</_name>
       <location>
-        <_name>Tallinn Ülemiste Airport</_name>
+	<!-- Translators: This is in Tallinn, Estonia. -->
+        <_name>Ülemiste Airport</_name>
         <code>EETN</code>
         <coordinates>59-24N 024-49E</coordinates>
       </location>
       <location>
-        <_name>Tallinn Ülemiste Airport (Alternate)</_name>
+	<!-- Translators: This is in Tallinn, Estonia. -->
+        <_name>Ülemiste Airport (alternate)</_name>
         <code>ULTT</code>
         <coordinates>59-23N 024-35E</coordinates>
       </location>
-    </city> 
-    <location>
-      <_name>Tartu/Ülenurme</_name>
-      <code>EETU</code>
-      <coordinates>58-18N 026-44E</coordinates>
-    </location>
+    </city>
+    <city>
+      <!-- Translators: This is in Estonia. -->
+      <_name>Tartu</_name>
+      <location>
+        <!-- Translators: This is in Tartu, Estonia. -->
+        <_name>Ülenurme</_name>
+        <code>EETU</code>
+        <coordinates>58-18N 026-44E</coordinates>
+      </location>
+    </city>
   </country>
   <country>
     <_name>Faroe Islands</_name>
     <location>
+      <!-- Translators: This is in Faroe Islands.
+	The Danish name is "Vagar/Sørvåg".
+	-->
       <_name>Vágar/Sørvágur</_name>
       <code>EKVG</code>
       <coordinates>62-04N 007-17W</coordinates>
@@ -24252,6 +24298,7 @@
   <country>
     <_name>Gibraltar</_name>
     <location>
+      <!-- Translators: This is in Gibraltar. -->
       <_name>Gibraltar</_name>
       <code>LXGB</code>
       <coordinates>36-09N 005-21W</coordinates>
@@ -24260,51 +24307,61 @@
   <country>
     <_name>Iceland</_name>
     <location>
+      <!-- Translators: This is in Iceland. -->
       <_name>Akureyri</_name>
       <code>BIAR</code>
       <coordinates>65-41N 018-05W</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Iceland. -->
       <_name>Akurnes</_name>
       <code>BIHN</code>
       <coordinates>64-18N 015-13W</coordinates>
     </location>
     <location>
-      <_name>Egilsstadir</_name>
+      <!-- Translators: This is in Iceland. -->
+      <_name>Egilsstaðir</_name>
       <code>BIEG</code>
       <coordinates>65-17N 014-24W</coordinates>
     </location>
     <location>
-      <_name>Grimsey</_name>
+      <!-- Translators: This is in Iceland. -->
+      <_name>Grímsey</_name>
       <code>BIGR</code>
       <coordinates>66-32N 018-01W</coordinates>
     </location>
     <location>
-      <_name>Keflavikurflugvollur</_name>
+      <!-- Translators: This is in Iceland. -->
+      <_name>Keflavík</_name>
       <code>BIKF</code>
       <coordinates>63-58N 022-36W</coordinates>
     </location>
     <location>
-      <_name>Raufarhofn</_name>
+      <!-- Translators: This is in Iceland. -->
+      <_name>Raufarhöfn</_name>
       <code>BIRG</code>
       <coordinates>66-27N 015-57W</coordinates>
     </location>
     <location>
-      <_name>Reykjavik</_name>
+      <!-- Translators: This is in Iceland. -->
+      <_name>Reykjavík</_name>
       <code>BIRK</code>
       <coordinates>64-08N 021-54W</coordinates>
     </location>
     <location>
-      <_name>Skjaldthingsstadir</_name>
+      <!-- Translators: This is in Iceland. -->
+      <_name>Vopnafjörður</_name>
       <code>BIVO</code>
       <coordinates>65-42N 014-49W</coordinates>
     </location>
     <location>
-      <_name>Stykkisholmur</_name>
+      <!-- Translators: This is in Iceland. -->
+      <_name>Stykkishólmur</_name>
       <code>BIST</code>
       <coordinates>65-05N 022-44W</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Iceland. -->
       <_name>Vestmannaeyjar</_name>
       <code>BIVM</code>
       <coordinates>63-24N 020-17W</coordinates>
