@@ -1,3 +1,8 @@
+2005-03-30  Christian Rose  <menthos@menthos.com>
+
+	* Locations.xml.in: Added some more translator
+	comments, explaining what country the names come from.
+
 2003-03-30  Ryan Lortie  <desrt@desrt.ca>
 
 	* gweather-about.c: Fix a silly typo.
